drivers/acpi/power.c
@@ -465,9 +465,11 @@ int acpi_power_transition(struct acpi_device *device, int state)
 	struct acpi_handle_list *tl = NULL;	/* Target Resources */
 	int i = 0;
 
-
 	if (!device || (state < ACPI_STATE_D0) || (state > ACPI_STATE_D3))
 		return -EINVAL;
+
+	if (device->power.state == state)
+		return 0;
 
 	if ((device->power.state < ACPI_STATE_D0)
 	    || (device->power.state > ACPI_STATE_D3))
@@ -486,10 +488,6 @@ int acpi_power_transition(struct acpi_device *device, int state)
 		result = acpi_power_on(tl->handles[i]);
 		if (result)
 			goto end;
-	}
-
-	if (device->power.state == state) {
-		goto end;
 	}
 
 	/*
